User update information

--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -249,7 +249,8 @@ ul#menu li a:hover
 .form_settings p
 { padding: 0 0 10px 0;}
 
-.form_settings span
+.form_settings span,
+.form_settings label
 { padding: 5px 0; 
   float: left; 
   width: 170px; 
@@ -262,7 +263,7 @@ ul#menu li a:hover
   border: 1px solid #eee;
   padding: 5px 10px;
   background: #fff;
-  color: #FFF;}
+  color: #000;}
   
 .form_settings .submit
 { border: 0; 
